<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    >

    <TextView
        android:id="@+id/today_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/currentDay_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/current_day_icon"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDay_description"
        tools:src="@tools:sample/cities" />

    <TextView
        android:id="@+id/currentDay_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDay_icon"
        tools:text="24º" />

    <TextView
        android:id="@+id/currentDay_realfeel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDay_temp"
        tools:text="Realfeel® 20º" />

    <TextView
        android:id="@+id/currentDay_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_text"
        tools:text="Sunny" />

    <ImageView
        android:id="@+id/separateLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:contentDescription="@string/separate_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDay_realfeel"
        tools:src="@tools:sample/cities" />

    <TextView
        android:id="@+id/secondDayWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/secondDayWeek_icon"
        app:layout_constraintStart_toStartOf="@+id/secondDayWeek_icon"
        app:layout_constraintTop_toBottomOf="@+id/separateLine"
        tools:text="Tuesday" />

    <ImageView
        android:id="@+id/secondDayWeek_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/second_day_icon"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondDayWeek"
        tools:src="@tools:sample/cities" />

    <TextView
        android:id="@+id/secondDay_minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/secondDayWeek_icon"
        app:layout_constraintStart_toStartOf="@+id/secondDayWeek_icon"
        app:layout_constraintTop_toBottomOf="@+id/secondDayWeek_icon"
        tools:text="10º" />

    <TextView
        android:id="@+id/secondDay_maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/secondDayWeek_icon"
        app:layout_constraintStart_toStartOf="@+id/secondDayWeek_icon"
        app:layout_constraintTop_toBottomOf="@+id/secondDay_minTemp"
        tools:text="17º" />

    <TextView
        android:id="@+id/thirdDayWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/thirdDayWeek_icon"
        app:layout_constraintStart_toStartOf="@+id/thirdDayWeek_icon"
        app:layout_constraintTop_toBottomOf="@+id/separateLine"
        tools:text="Wednesday" />

    <ImageView
        android:id="@+id/thirdDayWeek_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/third_day_icon"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdDayWeek"
        tools:src="@tools:sample/cities" />

    <TextView
        android:id="@+id/thirdDay_minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdDayWeek_icon"
        tools:text="9º" />

    <TextView
        android:id="@+id/thirdDay_maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdDay_minTemp"
        tools:text="12º" />

    <TextView
        android:id="@+id/fourthDayWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/fourthDayWeek_icon"
        app:layout_constraintStart_toStartOf="@+id/fourthDayWeek_icon"
        app:layout_constraintTop_toBottomOf="@+id/separateLine"
        tools:text="Thursday" />

    <ImageView
        android:id="@+id/fourthDayWeek_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/fourth_day_icon"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthDayWeek"
        tools:src="@tools:sample/cities" />

    <TextView
        android:id="@+id/fourthDay_minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/fourthDayWeek_icon"
        app:layout_constraintStart_toStartOf="@+id/fourthDayWeek_icon"
        app:layout_constraintTop_toBottomOf="@+id/fourthDayWeek_icon"
        tools:text="8º" />

    <TextView
        android:id="@+id/fourthDay_maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/fourthDayWeek_icon"
        app:layout_constraintStart_toStartOf="@+id/fourthDayWeek_icon"
        app:layout_constraintTop_toBottomOf="@+id/fourthDay_minTemp"
        tools:text="13º" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>